[gd_scene load_steps=35 format=3 uid="uid://dfww2l1c746yp"]

[ext_resource type="Script" path="res://Scripts/game.gd" id="1_dgi2b"]
[ext_resource type="Script" path="res://Scripts/AudioManager.gd" id="2_n5kxu"]
[ext_resource type="AudioStream" uid="uid://by2cd46gi657m" path="res://Assets/Sounds/Excavation/RockHit_SFX Edit 1 Export 1 Track 1 Render 0.mp3" id="4_dpany"]
[ext_resource type="AudioStream" uid="uid://2nb26u6yw7h8" path="res://Assets/Sounds/Excavation/rock-destroy-6409.mp3" id="4_h8pfo"]
[ext_resource type="AudioStream" uid="uid://cbjchwsjggnd1" path="res://Assets/Sounds/Excavation/RockHit_SFX Edit 1 Export 1 Track 2 Render 0.mp3" id="5_e1bgp"]
[ext_resource type="AudioStream" uid="uid://b2adjs7sib1ng" path="res://Assets/Sounds/spellhit.mp3" id="5_xvdam"]
[ext_resource type="AudioStream" uid="uid://cvafaq50rdxl6" path="res://Assets/Sounds/Excavation/RockHit_SFX Edit 1 Export 1 Track 3 Render 0.mp3" id="6_1e8ts"]
[ext_resource type="Script" path="res://addons/post_processing/node/post_process.gd" id="7_c55rf"]
[ext_resource type="Script" path="res://addons/post_processing/resource/post_processing_configuration.gd" id="8_04cba"]
[ext_resource type="Script" path="res://Scripts/FuelBar.gd" id="9_a1136"]
[ext_resource type="AudioStream" uid="uid://dfw4ipa4goc3s" path="res://Assets/Sounds/Ghost/classic-ghost-sound-95773.mp3" id="9_xc1ad"]
[ext_resource type="Theme" uid="uid://c78hinwaisvpk" path="res://Assets/Themes/GatoGelatoTheme.tres" id="10_l2cwi"]
[ext_resource type="AudioStream" uid="uid://bvlx2on1j7y2n" path="res://Assets/Sounds/Ghost/ghost-voice-halloween-moany-ghost-168411.mp3" id="10_y5008"]
[ext_resource type="AudioStream" uid="uid://bm1bcvdosd7sl" path="res://Assets/Sounds/Ghost/ghost-woo-135543.mp3" id="11_h60s7"]
[ext_resource type="AudioStream" uid="uid://bkji1m4122ghi" path="res://Assets/Sounds/Ghost/sad-ghost-40303.mp3" id="12_d10pr"]
[ext_resource type="AudioStream" uid="uid://bk1q4bprpk42x" path="res://Assets/Sounds/Ghost/dying-monster-101276.mp3" id="13_8sd7w"]
[ext_resource type="AudioStream" uid="uid://cupf2elmxgm1t" path="res://Assets/Sounds/Ghost/ghost-scream-37774.mp3" id="14_t16ek"]
[ext_resource type="Script" path="res://Scripts/HPBar.gd" id="16_ciyej"]
[ext_resource type="Texture2D" uid="uid://cy2en4aspprjm" path="res://Assets/Sprites/UI/temp_heart.jpg" id="17_1tl3n"]
[ext_resource type="Texture2D" uid="uid://tj78uy1pqfen" path="res://Assets/Sprites/UI/New Project.jpg" id="18_db26j"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_8gmyq"]
random_pitch = 1.36
random_volume_offset_db = 1.68
streams_count = 1
stream_0/stream = ExtResource("4_h8pfo")
stream_0/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_pxnpc"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_uiat6"]
streams_count = 1
stream_0/stream = ExtResource("5_xvdam")
stream_0/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_q0vqw"]
streams_count = 1
stream_0/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_vgwlr"]
random_pitch = 2.26
streams_count = 1
stream_0/stream = ExtResource("5_xvdam")
stream_0/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_xvtfe"]
random_pitch = 1.46
random_volume_offset_db = 2.25
streams_count = 3
stream_0/stream = ExtResource("4_dpany")
stream_0/weight = 1.0
stream_1/stream = ExtResource("5_e1bgp")
stream_1/weight = 1.0
stream_2/stream = ExtResource("6_1e8ts")
stream_2/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_vblwh"]
random_pitch = 1.63
streams_count = 1
stream_0/stream = ExtResource("11_h60s7")
stream_0/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_8swr7"]
random_pitch = 1.81
streams_count = 3
stream_0/stream = ExtResource("9_xc1ad")
stream_0/weight = 1.0
stream_1/stream = ExtResource("10_y5008")
stream_1/weight = 1.0
stream_2/stream = ExtResource("12_d10pr")
stream_2/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_6wg6x"]
random_pitch = 1.72
streams_count = 1
stream_0/stream = ExtResource("13_8sd7w")
stream_0/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_h3d7n"]
random_pitch = 2.17
streams_count = 1
stream_0/stream = ExtResource("14_t16ek")
stream_0/weight = 1.0

[sub_resource type="Resource" id="Resource_28o31"]
script = ExtResource("8_04cba")
reload = false
ASCII = false
ASCIISize = Vector2(4, 9)
ChromaticAberration = false
StrenghtCA = 1.0
Blur = false
L_O_D = 1.0
FishEye = false
FishEyeAspect = 1.0
FishEyeDistortion = 1.0
FishEyeRadius = 1.0
FishEyeAlpha = 1.0
FishEyeCrop = 1.0
FishEyeCropColor = Color(0, 0, 0, 1)
Vignette = true
VignetteIntensity = 0.2
VignetteOpacity = 0.194
VignetteR_G_B = Color(0.249643, 0.408144, 0.796947, 1)
Glitch = false
GlitchRange = 0.05
GlitchNoiseQuality = 250.0
GlitchIntenity = 0.0088
GlitchOffset = 0.03
GlitchColorOffset = 1.3
Outline = false
OutlineColor = Color(0, 0, 0, 1)
OutlineThreshold = 0.0
OutlineBlend = 0.01
Grain = false
GrainPower = 75
CircularWaves = false
CircularWavesAmplitude = 2.0
CircularWavesFrequency = 0.0
CircularWavesRippleRate = 150.0
SpeedLines = false
SpeedLinesColor = Color(0.876392, 0.736696, 0.916572, 1)
SpeedLinesCount = 2
SpeedLineDensity = 0.072
SpeedLineSpeed = 20
ColorCorrection = false
ColorCorrectionTint = Color(0, 0, 0, 1)
ColorCorrectionBrightness = 0.0
ColorCorrectionSaturation = 0.0
Palette = false
Pixelate = false
PixelatePixelSize = 8
CRT = false
overlay = false
scanlines_opacity = 0.4
scanlines_width = 0.25
grille_opacity = 0.3
pixelate = true
roll_speed = 8.0
roll_size = 15.0
roll_variation = 1.8
distort_intensity = 0.05
noise_opacity = 0.4
noise_speed = 5.0
static_noise_intensity = 0.06
aberration = 0.03
brightness = 1.4
discolor = true
warp_amount = 1.0
clip_warp = false
vignette_intensity = 0.4
vignette_opacity = 0.5
AnalogMonitor = false
AnalogMonitorResolution = Vector2(256, 256)
ScreenShake = false
ScreenShakePower = 0.1

[sub_resource type="Sky" id="Sky_vmw7l"]

[sub_resource type="Environment" id="Environment_uy1cj"]
background_mode = 3
sky = SubResource("Sky_vmw7l")
tonemap_mode = 2

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_hac0v"]

[node name="Game" type="Node2D" groups=["game"]]
script = ExtResource("1_dgi2b")

[node name="AudioManager" type="Node2D" parent="." groups=["audiomanager"]]
script = ExtResource("2_n5kxu")

[node name="RockSounds" type="Node2D" parent="AudioManager"]

[node name="RockHit" type="AudioStreamPlayer2D" parent="AudioManager/RockSounds"]

[node name="RockBreak" type="AudioStreamPlayer2D" parent="AudioManager/RockSounds"]
stream = SubResource("AudioStreamRandomizer_8gmyq")

[node name="PlayerSounds" type="Node2D" parent="AudioManager"]

[node name="PlayerFloat" type="AudioStreamPlayer2D" parent="AudioManager/PlayerSounds"]
stream = SubResource("AudioStreamRandomizer_pxnpc")

[node name="PlayerFire" type="AudioStreamPlayer2D" parent="AudioManager/PlayerSounds"]
stream = SubResource("AudioStreamRandomizer_uiat6")

[node name="PlayerCatnip" type="AudioStreamPlayer2D" parent="AudioManager/PlayerSounds"]

[node name="PlayerHurt" type="AudioStreamPlayer2D" parent="AudioManager/PlayerSounds"]
stream = SubResource("AudioStreamRandomizer_q0vqw")

[node name="PlayerDie" type="AudioStreamPlayer2D" parent="AudioManager/PlayerSounds"]

[node name="SpellCast" type="AudioStreamPlayer2D" parent="AudioManager/PlayerSounds"]
stream = SubResource("AudioStreamRandomizer_vgwlr")
pitch_scale = 1.19

[node name="SpellHit" type="AudioStreamPlayer2D" parent="AudioManager/PlayerSounds"]
stream = SubResource("AudioStreamRandomizer_xvtfe")
volume_db = 0.307
pitch_scale = 1.08

[node name="Ambience" type="Node2D" parent="AudioManager"]

[node name="BGM" type="Node2D" parent="AudioManager"]

[node name="Enemies" type="Node2D" parent="AudioManager"]

[node name="GhostSleep" type="AudioStreamPlayer2D" parent="AudioManager/Enemies"]
stream = SubResource("AudioStreamRandomizer_vblwh")

[node name="GhostHaunt" type="AudioStreamPlayer2D" parent="AudioManager/Enemies"]
stream = SubResource("AudioStreamRandomizer_8swr7")

[node name="GhostStun" type="AudioStreamPlayer2D" parent="AudioManager/Enemies"]
stream = SubResource("AudioStreamRandomizer_6wg6x")
volume_db = 17.637

[node name="GhostBanished" type="AudioStreamPlayer2D" parent="AudioManager/Enemies"]
stream = SubResource("AudioStreamRandomizer_h3d7n")
volume_db = 4.514

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PostProcess" type="CanvasLayer" parent="CanvasLayer"]
script = ExtResource("7_c55rf")
configuration = SubResource("Resource_28o31")

[node name="LevelInterface" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="HPBar" type="HBoxContainer" parent="CanvasLayer/LevelInterface" groups=["hpbar"]]
z_index = 3
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/separation = 5
script = ExtResource("16_ciyej")

[node name="Heart1" type="TextureRect" parent="CanvasLayer/LevelInterface/HPBar"]
layout_mode = 2
texture = ExtResource("17_1tl3n")
stretch_mode = 2

[node name="Heart2" type="TextureRect" parent="CanvasLayer/LevelInterface/HPBar"]
layout_mode = 2
texture = ExtResource("17_1tl3n")
stretch_mode = 2

[node name="Heart3" type="TextureRect" parent="CanvasLayer/LevelInterface/HPBar"]
layout_mode = 2
texture = ExtResource("17_1tl3n")
stretch_mode = 2

[node name="WandXP" type="Control" parent="CanvasLayer/LevelInterface"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="WandLevel" type="Control" parent="CanvasLayer/LevelInterface"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="FuelBar" type="Control" parent="CanvasLayer/LevelInterface"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 40.0
grow_horizontal = 2
script = ExtResource("9_a1136")

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer/LevelInterface/FuelBar"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 0
offset_left = -228.0
offset_right = 272.0
offset_bottom = 36.0
pivot_offset = Vector2(250, 0)
theme = ExtResource("10_l2cwi")
max_value = 10.0
step = 1.0
value = 5.0

[node name="StarIcon" type="Control" parent="CanvasLayer/LevelInterface"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Star" type="TextureRect" parent="CanvasLayer/LevelInterface/StarIcon"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="StarOutline" type="TextureRect" parent="CanvasLayer/LevelInterface/StarIcon"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="BookIcon" type="Control" parent="CanvasLayer/LevelInterface"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Book" type="TextureRect" parent="CanvasLayer/LevelInterface/BookIcon"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="BookOutline" type="TextureRect" parent="CanvasLayer/LevelInterface/BookIcon"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Control" type="Control" parent="CanvasLayer/LevelInterface"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="MainMenu" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("10_l2cwi")

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/MainMenu"]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
texture = ExtResource("18_db26j")

[node name="StartGame" type="Button" parent="CanvasLayer/MainMenu"]
layout_mode = 0
offset_left = 86.0
offset_top = 499.0
offset_right = 264.0
offset_bottom = 535.0
text = "JOGAR"

[node name="Quit" type="Button" parent="CanvasLayer/MainMenu"]
layout_mode = 0
offset_left = 93.0
offset_top = 584.0
offset_right = 136.0
offset_bottom = 615.0
text = "SAIR"

[node name="Story" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Briefing" type="Control" parent="CanvasLayer/Story"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Debriefing" type="Control" parent="CanvasLayer/Story"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Ending" type="Control" parent="CanvasLayer/Story"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="QuakeTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_uy1cj")
camera_attributes = SubResource("CameraAttributesPractical_hac0v")

[connection signal="pressed" from="CanvasLayer/MainMenu/StartGame" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenu/Quit" to="." method="_on_quit_pressed"]
[connection signal="timeout" from="QuakeTimer" to="." method="_on_quake_timer_timeout"]
